Do routing with with connexion
